objects/SFDC_ACCOUNT_SITE_SALES__x.object
<CustomObject>
    <description>SFDC_ACCOUNT_SITE_SALES</description>
    <externalDataSource>sknowflake</externalDataSource>
    <externalName>SFDC_ACCOUNT_SITE_SALES</externalName>
    <fields>
        <fullName>CATEGORY_COUNT_FLG__c</fullName>
        <description>CATEGORY_COUNT_FLG</description>
        <externalDeveloperName>CATEGORY_COUNT_FLG</externalDeveloperName>
        <label>CATEGORY_COUNT_FLG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CATEGORY_COUNT__c</fullName>
        <description>CATEGORY_COUNT</description>
        <externalDeveloperName>CATEGORY_COUNT</externalDeveloperName>
        <label>CATEGORY_COUNT</label>
        <length>39</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBS_LAST_ORDER_AMT__c</fullName>
        <description>CBS_LAST_ORDER_AMT</description>
        <externalDeveloperName>CBS_LAST_ORDER_AMT</externalDeveloperName>
        <label>CBS_LAST_ORDER_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBS_LAST_ORDER_DT_TXT__c</fullName>
        <description>CBS_LAST_ORDER_DT_TXT</description>
        <externalDeveloperName>CBS_LAST_ORDER_DT_TXT</externalDeveloperName>
        <label>CBS_LAST_ORDER_DT_TXT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_PARTY_SITE_ID__c</fullName>
        <description>CDH_PARTY_SITE_ID</description>
        <externalDeveloperName>CDH_PARTY_SITE_ID</externalDeveloperName>
        <label>CDH_PARTY_SITE_ID</label>
        <length>39</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPD_LAST_ORDER_AMT__c</fullName>
        <description>CPD_LAST_ORDER_AMT</description>
        <externalDeveloperName>CPD_LAST_ORDER_AMT</externalDeveloperName>
        <label>CPD_LAST_ORDER_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPD_LAST_ORDER_DT_TXT__c</fullName>
        <description>CPD_LAST_ORDER_DT_TXT</description>
        <externalDeveloperName>CPD_LAST_ORDER_DT_TXT</externalDeveloperName>
        <label>CPD_LAST_ORDER_DT_TXT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_CREATE_DT_TXT__c</fullName>
        <description>CUSTOMER_CREATE_DT_TXT</description>
        <externalDeveloperName>CUSTOMER_CREATE_DT_TXT</externalDeveloperName>
        <label>CUSTOMER_CREATE_DT_TXT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FILING_LAST_ORDER_AMT__c</fullName>
        <description>FILING_LAST_ORDER_AMT</description>
        <externalDeveloperName>FILING_LAST_ORDER_AMT</externalDeveloperName>
        <label>FILING_LAST_ORDER_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FILING_LAST_ORDER_DT_TXT__c</fullName>
        <description>FILING_LAST_ORDER_DT_TXT</description>
        <externalDeveloperName>FILING_LAST_ORDER_DT_TXT</externalDeveloperName>
        <label>FILING_LAST_ORDER_DT_TXT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIRST_ORDER_DT_TXT__c</fullName>
        <description>FIRST_ORDER_DT_TXT</description>
        <externalDeveloperName>FIRST_ORDER_DT_TXT</externalDeveloperName>
        <label>FIRST_ORDER_DT_TXT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FURN_LAST_ORDER_AMT__c</fullName>
        <description>FURN_LAST_ORDER_AMT</description>
        <externalDeveloperName>FURN_LAST_ORDER_AMT</externalDeveloperName>
        <label>FURN_LAST_ORDER_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FURN_LAST_ORDER_DT_TXT__c</fullName>
        <description>FURN_LAST_ORDER_DT_TXT</description>
        <externalDeveloperName>FURN_LAST_ORDER_DT_TXT</externalDeveloperName>
        <label>FURN_LAST_ORDER_DT_TXT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INK_LAST_ORDER_AMT__c</fullName>
        <description>INK_LAST_ORDER_AMT</description>
        <externalDeveloperName>INK_LAST_ORDER_AMT</externalDeveloperName>
        <label>INK_LAST_ORDER_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INK_LAST_ORDER_DT_TXT__c</fullName>
        <description>INK_LAST_ORDER_DT_TXT</description>
        <externalDeveloperName>INK_LAST_ORDER_DT_TXT</externalDeveloperName>
        <label>INK_LAST_ORDER_DT_TXT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LABELS_LAST_ORDER_AMT__c</fullName>
        <description>LABELS_LAST_ORDER_AMT</description>
        <externalDeveloperName>LABELS_LAST_ORDER_AMT</externalDeveloperName>
        <label>LABELS_LAST_ORDER_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LABELS_LAST_ORDER_DT_TXT__c</fullName>
        <description>LABELS_LAST_ORDER_DT_TXT</description>
        <externalDeveloperName>LABELS_LAST_ORDER_DT_TXT</externalDeveloperName>
        <label>LABELS_LAST_ORDER_DT_TXT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_180_DAYS_SALES_AMT__c</fullName>
        <description>LAST_180_DAYS_SALES_AMT</description>
        <externalDeveloperName>LAST_180_DAYS_SALES_AMT</externalDeveloperName>
        <label>LAST_180_DAYS_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAST_270_DAYS_SALES_AMT__c</fullName>
        <description>LAST_270_DAYS_SALES_AMT</description>
        <externalDeveloperName>LAST_270_DAYS_SALES_AMT</externalDeveloperName>
        <label>LAST_270_DAYS_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAST_365_DAYS_SALES_AMT__c</fullName>
        <description>LAST_365_DAYS_SALES_AMT</description>
        <externalDeveloperName>LAST_365_DAYS_SALES_AMT</externalDeveloperName>
        <label>LAST_365_DAYS_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAST_ORDER_DT_TXT__c</fullName>
        <description>LAST_ORDER_DT_TXT</description>
        <externalDeveloperName>LAST_ORDER_DT_TXT</externalDeveloperName>
        <label>LAST_ORDER_DT_TXT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIKELY_TO_PURCHASE_FLG__c</fullName>
        <description>LIKELY_TO_PURCHASE_FLG</description>
        <externalDeveloperName>LIKELY_TO_PURCHASE_FLG</externalDeveloperName>
        <label>LIKELY_TO_PURCHASE_FLG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LY_CBS_IMU_AMT__c</fullName>
        <description>LY_CBS_IMU_AMT</description>
        <externalDeveloperName>LY_CBS_IMU_AMT</externalDeveloperName>
        <label>LY_CBS_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_CBS_SALES_AMT__c</fullName>
        <description>LY_CBS_SALES_AMT</description>
        <externalDeveloperName>LY_CBS_SALES_AMT</externalDeveloperName>
        <label>LY_CBS_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_CPD_IMU_AMT__c</fullName>
        <description>LY_CPD_IMU_AMT</description>
        <externalDeveloperName>LY_CPD_IMU_AMT</externalDeveloperName>
        <label>LY_CPD_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_CPD_SALES_AMT__c</fullName>
        <description>LY_CPD_SALES_AMT</description>
        <externalDeveloperName>LY_CPD_SALES_AMT</externalDeveloperName>
        <label>LY_CPD_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_FILING_IMU_AMT__c</fullName>
        <description>LY_FILING_IMU_AMT</description>
        <externalDeveloperName>LY_FILING_IMU_AMT</externalDeveloperName>
        <label>LY_FILING_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_FILING_SALES_AMT__c</fullName>
        <description>LY_FILING_SALES_AMT</description>
        <externalDeveloperName>LY_FILING_SALES_AMT</externalDeveloperName>
        <label>LY_FILING_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_FURN_IMU_AMT__c</fullName>
        <description>LY_FURN_IMU_AMT</description>
        <externalDeveloperName>LY_FURN_IMU_AMT</externalDeveloperName>
        <label>LY_FURN_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_FURN_SALES_AMT__c</fullName>
        <description>LY_FURN_SALES_AMT</description>
        <externalDeveloperName>LY_FURN_SALES_AMT</externalDeveloperName>
        <label>LY_FURN_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_INK_IMU_AMT__c</fullName>
        <description>LY_INK_IMU_AMT</description>
        <externalDeveloperName>LY_INK_IMU_AMT</externalDeveloperName>
        <label>LY_INK_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_INK_SALES_AMT__c</fullName>
        <description>LY_INK_SALES_AMT</description>
        <externalDeveloperName>LY_INK_SALES_AMT</externalDeveloperName>
        <label>LY_INK_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_LABELS_IMU_AMT__c</fullName>
        <description>LY_LABELS_IMU_AMT</description>
        <externalDeveloperName>LY_LABELS_IMU_AMT</externalDeveloperName>
        <label>LY_LABELS_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_LABELS_SALES_AMT__c</fullName>
        <description>LY_LABELS_SALES_AMT</description>
        <externalDeveloperName>LY_LABELS_SALES_AMT</externalDeveloperName>
        <label>LY_LABELS_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_MISC_IMU_AMT__c</fullName>
        <description>LY_MISC_IMU_AMT</description>
        <externalDeveloperName>LY_MISC_IMU_AMT</externalDeveloperName>
        <label>LY_MISC_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_MISC_SALES_AMT__c</fullName>
        <description>LY_MISC_SALES_AMT</description>
        <externalDeveloperName>LY_MISC_SALES_AMT</externalDeveloperName>
        <label>LY_MISC_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_MPS_IMU_AMT__c</fullName>
        <description>LY_MPS_IMU_AMT</description>
        <externalDeveloperName>LY_MPS_IMU_AMT</externalDeveloperName>
        <label>LY_MPS_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_MPS_SALES_AMT__c</fullName>
        <description>LY_MPS_SALES_AMT</description>
        <externalDeveloperName>LY_MPS_SALES_AMT</externalDeveloperName>
        <label>LY_MPS_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_MTD_AOV__c</fullName>
        <description>LY_MTD_AOV</description>
        <externalDeveloperName>LY_MTD_AOV</externalDeveloperName>
        <label>LY_MTD_AOV</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_MTD_IMU_AMT__c</fullName>
        <description>LY_MTD_IMU_AMT</description>
        <externalDeveloperName>LY_MTD_IMU_AMT</externalDeveloperName>
        <label>LY_MTD_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_MTD_ORDERS__c</fullName>
        <description>LY_MTD_ORDERS</description>
        <externalDeveloperName>LY_MTD_ORDERS</externalDeveloperName>
        <label>LY_MTD_ORDERS</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_MTD_SALES_AMT__c</fullName>
        <description>LY_MTD_SALES_AMT</description>
        <externalDeveloperName>LY_MTD_SALES_AMT</externalDeveloperName>
        <label>LY_MTD_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_MTH_TOTAL_IMU_AMT__c</fullName>
        <description>LY_MTH_TOTAL_IMU_AMT</description>
        <externalDeveloperName>LY_MTH_TOTAL_IMU_AMT</externalDeveloperName>
        <label>LY_MTH_TOTAL_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_MTH_TOTAL_SALES_AMT__c</fullName>
        <description>LY_MTH_TOTAL_SALES_AMT</description>
        <externalDeveloperName>LY_MTH_TOTAL_SALES_AMT</externalDeveloperName>
        <label>LY_MTH_TOTAL_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_OFFICE_IMU_AMT__c</fullName>
        <description>LY_OFFICE_IMU_AMT</description>
        <externalDeveloperName>LY_OFFICE_IMU_AMT</externalDeveloperName>
        <label>LY_OFFICE_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_OFFICE_SALES_AMT__c</fullName>
        <description>LY_OFFICE_SALES_AMT</description>
        <externalDeveloperName>LY_OFFICE_SALES_AMT</externalDeveloperName>
        <label>LY_OFFICE_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_PAPER_IMU_AMT__c</fullName>
        <description>LY_PAPER_IMU_AMT</description>
        <externalDeveloperName>LY_PAPER_IMU_AMT</externalDeveloperName>
        <label>LY_PAPER_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_PAPER_SALES_AMT__c</fullName>
        <description>LY_PAPER_SALES_AMT</description>
        <externalDeveloperName>LY_PAPER_SALES_AMT</externalDeveloperName>
        <label>LY_PAPER_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_QTD_AOV__c</fullName>
        <description>LY_QTD_AOV</description>
        <externalDeveloperName>LY_QTD_AOV</externalDeveloperName>
        <label>LY_QTD_AOV</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_QTD_IMU_AMT__c</fullName>
        <description>LY_QTD_IMU_AMT</description>
        <externalDeveloperName>LY_QTD_IMU_AMT</externalDeveloperName>
        <label>LY_QTD_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_QTD_ORDERS__c</fullName>
        <description>LY_QTD_ORDERS</description>
        <externalDeveloperName>LY_QTD_ORDERS</externalDeveloperName>
        <label>LY_QTD_ORDERS</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_QTD_SALES_AMT__c</fullName>
        <description>LY_QTD_SALES_AMT</description>
        <externalDeveloperName>LY_QTD_SALES_AMT</externalDeveloperName>
        <label>LY_QTD_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_QTR_TOTAL_IMU_AMT__c</fullName>
        <description>LY_QTR_TOTAL_IMU_AMT</description>
        <externalDeveloperName>LY_QTR_TOTAL_IMU_AMT</externalDeveloperName>
        <label>LY_QTR_TOTAL_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_QTR_TOTAL_SALES_AMT__c</fullName>
        <description>LY_QTR_TOTAL_SALES_AMT</description>
        <externalDeveloperName>LY_QTR_TOTAL_SALES_AMT</externalDeveloperName>
        <label>LY_QTR_TOTAL_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_TECH_IMU_AMT__c</fullName>
        <description>LY_TECH_IMU_AMT</description>
        <externalDeveloperName>LY_TECH_IMU_AMT</externalDeveloperName>
        <label>LY_TECH_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_TECH_SALES_AMT__c</fullName>
        <description>LY_TECH_SALES_AMT</description>
        <externalDeveloperName>LY_TECH_SALES_AMT</externalDeveloperName>
        <label>LY_TECH_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_WRITING_IMU_AMT__c</fullName>
        <description>LY_WRITING_IMU_AMT</description>
        <externalDeveloperName>LY_WRITING_IMU_AMT</externalDeveloperName>
        <label>LY_WRITING_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_WRITING_SALES_AMT__c</fullName>
        <description>LY_WRITING_SALES_AMT</description>
        <externalDeveloperName>LY_WRITING_SALES_AMT</externalDeveloperName>
        <label>LY_WRITING_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_YR_TOTAL_IMU_AMT__c</fullName>
        <description>LY_YR_TOTAL_IMU_AMT</description>
        <externalDeveloperName>LY_YR_TOTAL_IMU_AMT</externalDeveloperName>
        <label>LY_YR_TOTAL_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_YR_TOTAL_SALES_AMT__c</fullName>
        <description>LY_YR_TOTAL_SALES_AMT</description>
        <externalDeveloperName>LY_YR_TOTAL_SALES_AMT</externalDeveloperName>
        <label>LY_YR_TOTAL_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_YTD_AOV__c</fullName>
        <description>LY_YTD_AOV</description>
        <externalDeveloperName>LY_YTD_AOV</externalDeveloperName>
        <label>LY_YTD_AOV</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_YTD_IMU_AMT__c</fullName>
        <description>LY_YTD_IMU_AMT</description>
        <externalDeveloperName>LY_YTD_IMU_AMT</externalDeveloperName>
        <label>LY_YTD_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_YTD_ORDERS__c</fullName>
        <description>LY_YTD_ORDERS</description>
        <externalDeveloperName>LY_YTD_ORDERS</externalDeveloperName>
        <label>LY_YTD_ORDERS</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_YTD_SALES_AMT__c</fullName>
        <description>LY_YTD_SALES_AMT</description>
        <externalDeveloperName>LY_YTD_SALES_AMT</externalDeveloperName>
        <label>LY_YTD_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MISC_LAST_ORDER_AMT__c</fullName>
        <description>MISC_LAST_ORDER_AMT</description>
        <externalDeveloperName>MISC_LAST_ORDER_AMT</externalDeveloperName>
        <label>MISC_LAST_ORDER_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MISC_LAST_ORDER_DT_TXT__c</fullName>
        <description>MISC_LAST_ORDER_DT_TXT</description>
        <externalDeveloperName>MISC_LAST_ORDER_DT_TXT</externalDeveloperName>
        <label>MISC_LAST_ORDER_DT_TXT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MONTH_SALES_FLG__c</fullName>
        <description>MONTH_SALES_FLG</description>
        <externalDeveloperName>MONTH_SALES_FLG</externalDeveloperName>
        <label>MONTH_SALES_FLG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPS_LAST_ORDER_AMT__c</fullName>
        <description>MPS_LAST_ORDER_AMT</description>
        <externalDeveloperName>MPS_LAST_ORDER_AMT</externalDeveloperName>
        <label>MPS_LAST_ORDER_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPS_LAST_ORDER_DT_TXT__c</fullName>
        <description>MPS_LAST_ORDER_DT_TXT</description>
        <externalDeveloperName>MPS_LAST_ORDER_DT_TXT</externalDeveloperName>
        <label>MPS_LAST_ORDER_DT_TXT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OFFICE_LAST_ORDER_AMT__c</fullName>
        <description>OFFICE_LAST_ORDER_AMT</description>
        <externalDeveloperName>OFFICE_LAST_ORDER_AMT</externalDeveloperName>
        <label>OFFICE_LAST_ORDER_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OFFICE_LAST_ORDER_DT_TXT__c</fullName>
        <description>OFFICE_LAST_ORDER_DT_TXT</description>
        <externalDeveloperName>OFFICE_LAST_ORDER_DT_TXT</externalDeveloperName>
        <label>OFFICE_LAST_ORDER_DT_TXT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDERS_SINCE_START_COUNT__c</fullName>
        <description>ORDERS_SINCE_START_COUNT</description>
        <externalDeveloperName>ORDERS_SINCE_START_COUNT</externalDeveloperName>
        <label>ORDERS_SINCE_START_COUNT</label>
        <length>39</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDERS_SINCE_START_FLG__c</fullName>
        <description>ORDERS_SINCE_START_FLG</description>
        <externalDeveloperName>ORDERS_SINCE_START_FLG</externalDeveloperName>
        <label>ORDERS_SINCE_START_FLG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAPER_LAST_ORDER_AMT__c</fullName>
        <description>PAPER_LAST_ORDER_AMT</description>
        <externalDeveloperName>PAPER_LAST_ORDER_AMT</externalDeveloperName>
        <label>PAPER_LAST_ORDER_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAPER_LAST_ORDER_DT_TXT__c</fullName>
        <description>PAPER_LAST_ORDER_DT_TXT</description>
        <externalDeveloperName>PAPER_LAST_ORDER_DT_TXT</externalDeveloperName>
        <label>PAPER_LAST_ORDER_DT_TXT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIOR_MTH_ADS_AMT__c</fullName>
        <description>PRIOR_MTH_ADS_AMT</description>
        <externalDeveloperName>PRIOR_MTH_ADS_AMT</externalDeveloperName>
        <label>PRIOR_MTH_ADS_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRIOR_QTR_ADS_AMT__c</fullName>
        <description>PRIOR_QTR_ADS_AMT</description>
        <externalDeveloperName>PRIOR_QTR_ADS_AMT</externalDeveloperName>
        <label>PRIOR_QTR_ADS_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRIOR_YR_ADS_AMT__c</fullName>
        <description>PRIOR_YR_ADS_AMT</description>
        <externalDeveloperName>PRIOR_YR_ADS_AMT</externalDeveloperName>
        <label>PRIOR_YR_ADS_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SALES_AMT_FLG__c</fullName>
        <description>SALES_AMT_FLG</description>
        <externalDeveloperName>SALES_AMT_FLG</externalDeveloperName>
        <label>SALES_AMT_FLG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALES_AMT__c</fullName>
        <description>SALES_AMT</description>
        <externalDeveloperName>SALES_AMT</externalDeveloperName>
        <label>SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_LAST_ORDER_AMT__c</fullName>
        <description>TECH_LAST_ORDER_AMT</description>
        <externalDeveloperName>TECH_LAST_ORDER_AMT</externalDeveloperName>
        <label>TECH_LAST_ORDER_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_LAST_ORDER_DT_TXT__c</fullName>
        <description>TECH_LAST_ORDER_DT_TXT</description>
        <externalDeveloperName>TECH_LAST_ORDER_DT_TXT</externalDeveloperName>
        <label>TECH_LAST_ORDER_DT_TXT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTAL_ORDERS__c</fullName>
        <description>TOTAL_ORDERS</description>
        <externalDeveloperName>TOTAL_ORDERS</externalDeveloperName>
        <label>TOTAL_ORDERS</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_ADS_MTD_AMT__c</fullName>
        <description>TY_ADS_MTD_AMT</description>
        <externalDeveloperName>TY_ADS_MTD_AMT</externalDeveloperName>
        <label>TY_ADS_MTD_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_ADS_QTD_AMT__c</fullName>
        <description>TY_ADS_QTD_AMT</description>
        <externalDeveloperName>TY_ADS_QTD_AMT</externalDeveloperName>
        <label>TY_ADS_QTD_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_ADS_YTD_AMT__c</fullName>
        <description>TY_ADS_YTD_AMT</description>
        <externalDeveloperName>TY_ADS_YTD_AMT</externalDeveloperName>
        <label>TY_ADS_YTD_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_CBS_IMU_AMT__c</fullName>
        <description>TY_CBS_IMU_AMT</description>
        <externalDeveloperName>TY_CBS_IMU_AMT</externalDeveloperName>
        <label>TY_CBS_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_CBS_SALES_AMT__c</fullName>
        <description>TY_CBS_SALES_AMT</description>
        <externalDeveloperName>TY_CBS_SALES_AMT</externalDeveloperName>
        <label>TY_CBS_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_CPD_IMU_AMT__c</fullName>
        <description>TY_CPD_IMU_AMT</description>
        <externalDeveloperName>TY_CPD_IMU_AMT</externalDeveloperName>
        <label>TY_CPD_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_CPD_SALES_AMT__c</fullName>
        <description>TY_CPD_SALES_AMT</description>
        <externalDeveloperName>TY_CPD_SALES_AMT</externalDeveloperName>
        <label>TY_CPD_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_FILING_IMU_AMT__c</fullName>
        <description>TY_FILING_IMU_AMT</description>
        <externalDeveloperName>TY_FILING_IMU_AMT</externalDeveloperName>
        <label>TY_FILING_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_FILING_SALES_AMT__c</fullName>
        <description>TY_FILING_SALES_AMT</description>
        <externalDeveloperName>TY_FILING_SALES_AMT</externalDeveloperName>
        <label>TY_FILING_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_FURN_IMU_AMT__c</fullName>
        <description>TY_FURN_IMU_AMT</description>
        <externalDeveloperName>TY_FURN_IMU_AMT</externalDeveloperName>
        <label>TY_FURN_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_FURN_SALES_AMT__c</fullName>
        <description>TY_FURN_SALES_AMT</description>
        <externalDeveloperName>TY_FURN_SALES_AMT</externalDeveloperName>
        <label>TY_FURN_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_INK_IMU_AMT__c</fullName>
        <description>TY_INK_IMU_AMT</description>
        <externalDeveloperName>TY_INK_IMU_AMT</externalDeveloperName>
        <label>TY_INK_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_INK_SALES_AMT__c</fullName>
        <description>TY_INK_SALES_AMT</description>
        <externalDeveloperName>TY_INK_SALES_AMT</externalDeveloperName>
        <label>TY_INK_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_LABELS_IMU_AMT__c</fullName>
        <description>TY_LABELS_IMU_AMT</description>
        <externalDeveloperName>TY_LABELS_IMU_AMT</externalDeveloperName>
        <label>TY_LABELS_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_LABELS_SALES_AMT__c</fullName>
        <description>TY_LABELS_SALES_AMT</description>
        <externalDeveloperName>TY_LABELS_SALES_AMT</externalDeveloperName>
        <label>TY_LABELS_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_MISC_IMU_AMT__c</fullName>
        <description>TY_MISC_IMU_AMT</description>
        <externalDeveloperName>TY_MISC_IMU_AMT</externalDeveloperName>
        <label>TY_MISC_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_MISC_SALES_AMT__c</fullName>
        <description>TY_MISC_SALES_AMT</description>
        <externalDeveloperName>TY_MISC_SALES_AMT</externalDeveloperName>
        <label>TY_MISC_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_MPS_IMU_AMT__c</fullName>
        <description>TY_MPS_IMU_AMT</description>
        <externalDeveloperName>TY_MPS_IMU_AMT</externalDeveloperName>
        <label>TY_MPS_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_MPS_SALES_AMT__c</fullName>
        <description>TY_MPS_SALES_AMT</description>
        <externalDeveloperName>TY_MPS_SALES_AMT</externalDeveloperName>
        <label>TY_MPS_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_MTD_AOV__c</fullName>
        <description>TY_MTD_AOV</description>
        <externalDeveloperName>TY_MTD_AOV</externalDeveloperName>
        <label>TY_MTD_AOV</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_MTD_IMU_AMT__c</fullName>
        <description>TY_MTD_IMU_AMT</description>
        <externalDeveloperName>TY_MTD_IMU_AMT</externalDeveloperName>
        <label>TY_MTD_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_MTD_ORDERS__c</fullName>
        <description>TY_MTD_ORDERS</description>
        <externalDeveloperName>TY_MTD_ORDERS</externalDeveloperName>
        <label>TY_MTD_ORDERS</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_MTD_SALES_AMT__c</fullName>
        <description>TY_MTD_SALES_AMT</description>
        <externalDeveloperName>TY_MTD_SALES_AMT</externalDeveloperName>
        <label>TY_MTD_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_OFFICE_IMU_AMT__c</fullName>
        <description>TY_OFFICE_IMU_AMT</description>
        <externalDeveloperName>TY_OFFICE_IMU_AMT</externalDeveloperName>
        <label>TY_OFFICE_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_OFFICE_SALES_AMT__c</fullName>
        <description>TY_OFFICE_SALES_AMT</description>
        <externalDeveloperName>TY_OFFICE_SALES_AMT</externalDeveloperName>
        <label>TY_OFFICE_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_PAPER_IMU_AMT__c</fullName>
        <description>TY_PAPER_IMU_AMT</description>
        <externalDeveloperName>TY_PAPER_IMU_AMT</externalDeveloperName>
        <label>TY_PAPER_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
</CustomObject>